css/woocommerce.css
/* ... */
a.button.alt, input.button.alt, input.submit.alt {
  background-color: #ced0ff;
  background-image: linear-gradient(to bottom, #ced0ff 0, #878ac1 100%) !important;
  color: #515151; }

.input-text, select.orderby {
  width: 100%;
  height: 39px;
  padding: 6px 12px;
  font-size: 16px;
  line-height: 1em;
  background-color: white;
  background-image: none;
  border: 1px solid #ccc;
  border-radius: 4px;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.75);
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.75);
  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s; }

.input-text {
  max-width: 75px;
  min-width: 50px; }

select.orderby {
  width: 100%;
  height: 39px;
  padding: 6px 12px;
  font-size: 16px;
  line-height: 1em;
  background-color: white;
  background-image: none;
  border: 1px solid #ccc;
  border-radius: 4px;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.75);
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.75);
  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s; }

span.onsale {
  display: block;
  text-align: center;
  background-color: #de0000;
  color: white;
  font-size: 35px;
  font-weight: bold;
  margin-top: 10px;
  border-radius: 5px; }

.products span.onsale {
  display: initial;
  text-align: initial;
  font-size: initial;
  margin: 0;
  padding: 3px 5px;
  position: absolute;
  opacity: 0.7; }
.products .price {
  font-weight: bold;
  color: #00ae00; }

ul.page-numbers {
  list-style-type: none;
  padding: 0;
  margin: 20px 0; }
  ul.page-numbers li {
    display: inline-block; }
    ul.page-numbers li a, ul.page-numbers li span {
      padding: 10px 13px;
      border: solid 1px #aeaeae;
      background-color: #efefef; }
      ul.page-numbers li a:hover, ul.page-numbers li span:hover {
        background-color: white;
        text-decoration: none; }
    ul.page-numbers li span.current {
      background-color: white; }

/*cart styles*/
form.woocommerce-cart-form td.product-remove a.remove {
  width: 100%;
  font-size: 0;
  padding: 5px 0 33px; }
  form.woocommerce-cart-form td.product-remove a.remove:hover {
    color: red !important;
    background: white; }
  form.woocommerce-cart-form td.product-remove a.remove:before {
    content: attr(aria-label);
    padding: 5px 7px;
    color: white;
    background: red;
    border-radius: 5px;
    font-size: 27px;
    background-image: linear-gradient(to bottom, red 0, #a00 100%); }
form.woocommerce-cart-form .input-text {
  height: initial; }
form.woocommerce-cart-form div.coupon .input-text {
  max-width: initial;
  width: 100% !important;
  min-width: inital;
  margin: 5px 0; }
form.woocommerce-cart-form div.coupon .button {
  width: 100% !important; }

/*breadcrumbs*/
.woocommerce-breadcrumb {
  display: none;
  margin: 10px 0;
  padding: 10px 25px;
  background: #efefef;
  border-radius: 5px; }

/*gallery*/
.woocommerce-product-gallery {
  margin-top: 10px; }
  .woocommerce-product-gallery img {
    max-width: 100% !important;
    height: auto !important;
    max-height: 100%; }
  .woocommerce-product-gallery .flex-viewport {
    width: 100%;
    margin: auto;
    max-width: 500px; }
  .woocommerce-product-gallery ol.flex-control-nav {
    width: 100%;
    margin: auto;
    max-width: 500px;
    list-style-type: none;
    padding: 0;
    text-align: center; }
    .woocommerce-product-gallery ol.flex-control-nav li {
      max-width: 100px;
      display: inline-block;
      padding: 10px; }

.entry-summary .price {
  margin: 10px;
  font-weight: bold;
  font-size: 24px;
  color: #00ae00;
  vertical-align: middle; }

/*variations table*/
table.variations {
  margin: 10px auto; }
  table.variations label {
    color: black;
    font-size: 24px;
    margin: 0;
    vertical-align: middle; }
  table.variations .bs-inline-hack {
    margin-top: 0;
    margin-bottom: 0;
    vertical-align: middle;
    display: inline-block;
    width: auto; }

.wcsc-cart-add-form table.group_table {
  width: 95%;
  max-width: 400px;
  margin: 20px auto; }
  .wcsc-cart-add-form table.group_table td {
    padding: 5px;
    white-space: normal; }
  .wcsc-cart-add-form table.group_table td.label {
    display: table-cell;
    vertical-align: middle;
    text-align: left; }
    .wcsc-cart-add-form table.group_table td.label label {
      margin-bottom: 0;
      font-size: 20px; }
.wcsc-cart-add-form .quantity-wrapper {
  padding: 10px;
  border: 2px solid #fbdedd;
  border-radius: 5px;
  max-width: 350px;
  margin: auto;
  width: 90%;
  text-align: center; }
  .wcsc-cart-add-form .quantity-wrapper div, .wcsc-cart-add-form .quantity-wrapper button, .wcsc-cart-add-form .quantity-wrapper input {
    display: inline-block; }

.product_meta {
  margin: 15px 0 10px;
  font-size: 14px; }
  .product_meta, .product_meta a {
    color: #aeaeae;
    font-style: italic; }
  .product_meta a {
    text-decoration: underline; }
  .product_meta:after {
    content: ".";
    visibility: hidden;
    clear: both;
    line-height: 0;
    height: 0;
    display: block; }

.wc-tabs-wrapper {
  clear: both;
  padding-top: 35px; }
  .wc-tabs-wrapper ul.tabs {
    list-style-type: none;
    margin: 0;
    padding: 0;
    padding-bottom: 18px;
    border-bottom: 10px #aeaeae solid; }
    .wc-tabs-wrapper ul.tabs li {
      display: inline;
      margin: 0 5px; }
      .wc-tabs-wrapper ul.tabs li a {
        padding: 20px 15px;
        background-color: white;
        border: 1px solid #aeaeae;
        color: black;
        border-top-left-radius: 5px;
        border-top-right-radius: 5px; }
      .wc-tabs-wrapper ul.tabs li a:hover {
        text-decoration: none;
        background-color: #aeaeae;
        color: white; }
    .wc-tabs-wrapper ul.tabs li:first-of-type {
      margin: 0 5px 0 0; }
    .wc-tabs-wrapper ul.tabs li.active a {
      background-color: #aeaeae;
      color: white; }

.woocommerce-Tabs-panel {
  box-shadow: 0 1px 1px transparent; }
/* ... */

